--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -23,5 +23,6 @@ jobs:
     - name: Build
       run: |
         npm install
+        npm install -D webpack-cli
         npx webpack
         npm run docs:build
