--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -43,4 +43,4 @@ jobs:
         uses: actions/deploy-pages@v4
          with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ../.vitepress/dist
+          publish_dir: ./docs/.vitepress/dist
