--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [14.x, 16.x, 18.x]
 
     steps:
     - uses: actions/checkout@v4
@@ -23,6 +23,4 @@ jobs:
     - name: Build
       run: |
         npm install
-        npm install -D webpack-cli
-        npx webpack
         npm run docs:build
